--- a/movies-explorer/src/components/Movies/FilterCheckbox/FilterCheckbox.css
+++ b/movies-explorer/src/components/Movies/FilterCheckbox/FilterCheckbox.css
@@ -1,14 +1,5 @@
-.filter-checkbox {
-  width: 100%;
-}
-
 .filter-checkbox__container {
-  margin: 0 auto;
-  min-width: 320px;
-  max-width: 1140px;
-  padding-top: 70px;
-  padding-bottom: 48px;
-  font-family: Inter, Arial, sans-serif;
+  height: 15px;
 }
 
 .filter-checkbox__switch {
@@ -32,7 +23,7 @@
   right: 0;
   bottom: 0;
   border-radius: 34px;
-  background-color: #ccc;
+  background-color: #a0a0a0;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
