feat: correct the position of the search icon

--- a/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
@@ -16,7 +16,7 @@
   margin-bottom: 35px;
   padding-top: 6px;
   padding-bottom: 14px;
-  background: url(../../../images/icon-find.svg) no-repeat center right;
+  background: url(../../../images/icon-find.svg) no-repeat right 12px;
   background-size: 34px 34px;
   border: 0;
   font-style: normal;
