--- a/movies-explorer/src/components/Main/Promo/Promo.css
+++ b/movies-explorer/src/components/Main/Promo/Promo.css
@@ -9,7 +9,7 @@
   max-width: 1140px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin: 0 auto;
   padding-top: 75px;
   padding-bottom: 75px;
