--- a/movies-explorer/src/components/Footer/Footer.css
+++ b/movies-explorer/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  background: #fafafa;
+  background: var(--main-color-fourth);
 
   font-family: Inter, Arial, sans-serif;
   font-weight: 400;
@@ -19,7 +19,7 @@
   padding-top: 79px;
   padding-bottom: 20px;
   text-align: center;
-  color: #a0a0a0;
+  color: var(--main-color-text);
   font-weight: 400;
   font-size: 13px;
 }
