--- a/movies-explorer/src/components/Main/Portfolio/Portfolio.css
+++ b/movies-explorer/src/components/Main/Portfolio/Portfolio.css
@@ -17,7 +17,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 20px;
-  color: #a0a0a0;
+  color: var(--main-color-text);
 }
 
 .portfolio__products {
