--- a/movies-explorer/src/components/Main/Promo/Promo.css
+++ b/movies-explorer/src/components/Main/Promo/Promo.css
@@ -1,6 +1,6 @@
 .promo {
   width: 100%;
-  background-color: #5c5c5c;
+  background-color: var(--main-color-first);
   font-family: Inter, Arial, sans-serif;
 }
 
@@ -44,6 +44,6 @@
   padding: 10px 20px;
   border: 1px solid #ffffff;
   border-radius: 3px;
-  background-color: #5c5c5c;
+  background-color: var(--main-color-first);
   color: #ffffff;
 }
