--- a/movies-explorer/src/components/Movies/FilterCheckbox/FilterCheckbox.css
+++ b/movies-explorer/src/components/Movies/FilterCheckbox/FilterCheckbox.css
@@ -23,7 +23,7 @@
   right: 0;
   bottom: 0;
   border-radius: 34px;
-  background-color: #a0a0a0;
+  background-color: var(--main-color-text);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -42,11 +42,11 @@
 }
 
 .filter-checkbox__checkbox:checked + .filter-checkbox__slider {
-  background-color: #2be080;
+  background-color: var(--main-color-third);
 }
 
 .filter-checkbox__checkbox:focus + .filter-checkbox__slider {
-  box-shadow: 0 0 1px #2be080;
+  box-shadow: 0 0 1px var(--main-color-third);
 }
 
 .filter-checkbox__checkbox:checked + .filter-checkbox__slider::before {
