--- a/movies-explorer/src/components/Register/Register.css
+++ b/movies-explorer/src/components/Register/Register.css
@@ -1,16 +1,16 @@
-.register {
+.authorization {
   width: 100%;
   font-family: Inter, Arial, sans-serif;
   padding-top: 60px;
 }
 
-.register__container {
+.authorization__container {
   min-width: 320px;
   max-width: 396px;
   margin: 0 auto;
 }
 
-.register__titile {
+.authorization__titile {
   margin: 0;
   margin-bottom: 40px;
   font-style: normal;
@@ -19,7 +19,7 @@
   line-height: 29px;
 }
 
-.register__input {
+.authorization__input {
   width: 100%;
   box-sizing: border-box;
   min-height: 46px;
@@ -31,24 +31,24 @@
   border-radius: 8px;
 }
 
-.register__label {
+.authorization__label {
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
 
-  color: #a0a0a0;
+  color: var(--main-color-text);
 }
 
-.register__input {
+.authorization__input {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.register__input:last-of-type {
+.authorization__input:last-of-type {
   margin-bottom: 0;
 }
 
-.register__button {
+.authorization__button {
   width: 100%;
   height: 50px;
   margin-top: 69px;
@@ -56,7 +56,7 @@
 
   border: 0;
   border-radius: 2px;
-  background-color: #2be080;
+  background-color: var(--main-color-third);
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
@@ -65,22 +65,22 @@
   transition: 0.1s ease;
 }
 
-.register__button:hover {
+.authorization__button:hover {
   opacity: 0.8;
 }
 
-.register__suggest {
+.authorization__suggest {
   margin: 0;
   margin-top: 15px;
   text-align: center;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #a0a0a0;
+  color: var(--main-color-text);
 }
 
-.register__link {
+.authorization__link {
   margin-left: 6px;
-  color: #2be080;
+  color: var(--main-color-third);
   text-decoration: none;
 }
