feat: create a variable for the font

--- a/movies-explorer/src/components/Login/Login.css
+++ b/movies-explorer/src/components/Login/Login.css
@@ -1,6 +1,6 @@
 .authorization {
   width: 100%;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   padding-top: 60px;
 }
 
