--- a/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
@@ -8,7 +8,7 @@
   max-width: 1140px;
   padding-top: 70px;
   padding-bottom: 48px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
 }
 
 .search-form__input {
