--- a/movies-explorer/src/components/Footer/Footer.css
+++ b/movies-explorer/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   width: 100%;
   background: var(--main-color-fourth);
 
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   line-height: 15.73px;
   font-size: 13px;
