--- a/movies-explorer/src/components/Main/AboutMe/AboutMe.css
+++ b/movies-explorer/src/components/Main/AboutMe/AboutMe.css
@@ -15,7 +15,7 @@
   padding-bottom: 23px;
   border-bottom: 1px solid black;
   text-align: left;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   line-height: 26.63px;
   font-size: 22px;
@@ -28,7 +28,7 @@
 .about-me__presentation {
   max-width: 600px;
   padding-top: 66px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
 }
 
 .about-me__name {
