--- a/movies-explorer/src/components/Main/AboutProject/AboutProject.css
+++ b/movies-explorer/src/components/Main/AboutProject/AboutProject.css
@@ -15,7 +15,7 @@
   padding-bottom: 23px;
   border-bottom: 1px solid black;
   text-align: left;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   line-height: 26.63px;
   font-size: 22px;
@@ -33,7 +33,7 @@
 
 .about-project__subtitle {
   margin: 0;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -43,7 +43,7 @@
 .about-project__paragraph {
   margin: 0;
   padding-top: 26px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -54,7 +54,7 @@
   display: flex;
   padding-top: 110px;
 
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
