--- a/movies-explorer/src/components/Main/Techs/Techs.css
+++ b/movies-explorer/src/components/Main/Techs/Techs.css
@@ -16,7 +16,7 @@
   padding-bottom: 23px;
   border-bottom: 1px solid black;
   text-align: left;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 400;
   line-height: 26.63px;
   font-size: 22px;
@@ -31,7 +31,7 @@
   margin: 0;
   padding-top: 90px;
   text-align: center;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-style: normal;
   font-weight: normal;
   font-size: 50px;
@@ -44,7 +44,7 @@
   margin: 0 auto;
   text-align: center;
   max-width: 460px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
