--- a/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
@@ -5,7 +5,7 @@
   background: #fdfdfd;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   border-radius: 6px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: var(--main-font-family);
 }
 
 .movies-card__title-wrap {
