--- a/movies-explorer/src/utils/var.css
+++ b/movies-explorer/src/utils/var.css
@@ -5,4 +5,6 @@
   --main-color-fourth: #fafafa;
   --main-color-accent: #ee3465;
   --main-color-text: #a0a0a0;
+
+  --main-font-family: Inter, Arial, sans-serif;
 }
