--- a/movies-explorer/src/components/Register/Register.css
+++ b/movies-explorer/src/components/Register/Register.css
@@ -10,7 +10,7 @@
   margin: 0 auto;
 }
 
-.authorization__titile {
+.authorization__title {
   margin: 0;
   margin-bottom: 40px;
   font-style: normal;
