--- a/movies-explorer/src/components/Profile/Profile.css
+++ b/movies-explorer/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
 
 .profile__container {
   margin: 0 auto;
+  padding: 74px 0 70px;
   max-width: 1140px;
   min-width: 320px;
 }
@@ -29,7 +30,7 @@
 .profile__input-field {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   box-sizing: border-box;
   border-bottom: 1px solid #e8e8e8;
 }
@@ -38,11 +39,20 @@
   border-bottom: none;
 }
 
+.profile__label {
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 13px;
+}
+
 .profile__input {
+  padding: 17px 0;
   text-align: right;
   outline: none;
   border: none;
   font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
 }
 
 .profile__button {
@@ -53,4 +63,11 @@
   outline: none;
   background: none;
   cursor: pointer;
+}
+
+.profile__link-logout {
+  margin-top: 16px;
+  text-align: center;
+  text-decoration: none;
+  color: var(--main-color-accent);
 }
