--- a/movies-explorer/src/components/Navigation/Navigation.css
+++ b/movies-explorer/src/components/Navigation/Navigation.css
@@ -1,8 +1,89 @@
-@import url(./_hidden/navigation_hidden.css);
-
 .navigation {
   max-width: 381px;
+  font-family: var(--main-font-family);
+}
+
+.navigation__links {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.navigation__links-item {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30px;
+}
+
+.navigation__links-item:first-of-type {
+  margin-left: 0;
 }
 
 .navigation__register-link {
+  /* display: flex;
+  align-items: center; */
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.navigation__login-link {
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 76px;
+  height: 32px;
+  background-color: var(--main-color-third);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-decoration: none;
+  color: #000;
+}
+
+.navigation__movies-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #000000;
+}
+
+.navigation__save-films-link {
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #000000;
+}
+
+.navigation__profile-link {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+
+  color: #000000;
+}
+
+.navigation__accaunt-image {
+  width: 26px;
+  height: 30px;
+  margin-left: 17px;
+  padding: 8px 7.25px;
+  border-radius: 4px;
+  box-sizing: border-box;
+
+  background-color: #f9f9f9;
 }
