--- a/movies-explorer/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/movies-explorer/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -12,3 +12,26 @@
   list-style: none;
   margin: 0 auto;
 }
+
+.movies-card-list__pagination {
+  padding: 50px 0 80px;
+  text-align: center;
+}
+
+.movies-card-list__append-button {
+  width: 320px;
+  height: 36px;
+  background-color: #f9f9f9;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  transition: background-color 0.2s ease-out;
+}
+
+.movies-card-list__append-button:hover {
+  background-color: var(--main-color-third);
+}
