feat: change the original color of the button on the card

--- a/movies-explorer/src/utils/var.css
+++ b/movies-explorer/src/utils/var.css
@@ -5,6 +5,7 @@
   --main-color-fourth: #fafafa;
   --main-color-accent: #ee3465;
   --main-color-text: #a0a0a0;
+  --main-color-button: #f9f9f9;
 
   --main-font-family: Inter, Arial, sans-serif;
 }
