--- a/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
@@ -2,7 +2,7 @@
   max-width: 360px;
   display: flex;
   flex-direction: column;
-  background: #fdfdfd;
+  background-color: #fdfdfd;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   border-radius: 6px;
   font-family: var(--main-font-family);
@@ -37,8 +37,11 @@
   margin: 18px 130px;
   width: 100px;
   height: 29px;
-  background: var(--main-color-accent);
+  background: var(--main-color-button);
   border-radius: 30px;
   border: none;
   cursor: pointer;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 11px;
 }
