--- a/movies-explorer/src/components/Main/AboutProject/AboutProject.css
+++ b/movies-explorer/src/components/Main/AboutProject/AboutProject.css
@@ -6,6 +6,7 @@
   min-width: 320px;
   max-width: 1140px;
   margin: 0 auto;
+  box-sizing: border-box;
   padding-top: 110px;
   padding-bottom: 110px;
 }
@@ -24,11 +25,18 @@
 .about-project__description {
   display: flex;
   justify-content: space-between;
+  list-style-type: none;
+  padding-left: 0;
   padding-top: 70px;
 }
 
 .about-project__column {
   max-width: 550px;
+  margin-left: 30px;
+}
+
+.about-project__column:first-of-type {
+  margin-left: 0;
 }
 
 .about-project__subtitle {
@@ -88,4 +96,10 @@
   margin: 0;
   padding: 10px 0 10px 0;
   background-color: #f2f2f2;
+}
+
+@media all and (max-width: 1200px) {
+  .about-project__container {
+    padding: 90px 50px;
+  }
 }
