--- a/movies-explorer/src/components/Main/Promo/Promo.css
+++ b/movies-explorer/src/components/Main/Promo/Promo.css
@@ -41,9 +41,45 @@
 
 .promo__button {
   margin-top: 146px;
+  margin-bottom: 25px;
   padding: 10px 20px;
   border: 1px solid #ffffff;
   border-radius: 3px;
   background-color: var(--main-color-first);
   color: #ffffff;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+@media all and (max-width: 1200px) {
+  .promo__container {
+    flex-direction: column-reverse;
+    padding-top: 140px;
+    padding-bottom: 66px;
+    align-items: center;
+  }
+
+  .promo__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .promo__title {
+    padding-top: 50px;
+    text-align: center;
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  .promo__subtitle {
+    text-align: center;
+    padding-top: 23px;
+  }
+
+  .promo__button {
+    margin-top: 92px;
+    margin-bottom: 10px;
+  }
 }
