--- a/movies-explorer/src/components/Main/Techs/Techs.css
+++ b/movies-explorer/src/components/Main/Techs/Techs.css
@@ -40,8 +40,8 @@
 }
 
 .techs__description {
-  padding-top: 26px;
   margin: 0 auto;
+  margin-top: 26px;
   text-align: center;
   max-width: 460px;
   font-family: var(--main-font-family);
@@ -56,7 +56,8 @@
 .techs__list {
   display: flex;
   margin: 0;
-  padding: 100px 0 0 0;
+  margin-top: 100px;
+  padding-left: 0;
   align-items: center;
   justify-content: space-between;
   list-style: none;
@@ -78,4 +79,24 @@
   font-size: 14px;
   line-height: 17px;
   letter-spacing: -0.04em;
+}
+
+@media all and (max-width: 1200px) {
+  .techs__container {
+    padding: 90px 50px;
+  }
+
+  .techs__description {
+    margin-top: 23px;
+  }
+
+  .techs__item {
+    width: 84px;
+    height: 57px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .techs__list {
+    margin-top: 83px;
+  }
 }
