--- a/movies-explorer/src/components/Header/Header.css
+++ b/movies-explorer/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+  display: none;
   width: 100%;
   margin: 0 auto;
 }
@@ -22,5 +23,8 @@
 @media all and (max-width: 1200px) {
   .header__container {
     padding: 0 30px;
+  }
+  .header_deactive_padding {
+    padding: 0 0;
   }
 }
