--- a/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
@@ -95,3 +95,25 @@
   font-size: 13px;
   line-height: 18px;
 }
+
+@media all and (max-width: 1200px) {
+  .search-form__container {
+    padding: 80px 30px 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .search-form__input {
+    margin-bottom: 30px;
+  }
+
+  .search-form__checkbox-wrap {
+    justify-content: flex-end;
+    flex-direction: row-reverse;
+  }
+
+  .search-form__name-checkbox {
+    margin-left: 0;
+    margin-right: 16px;
+  }
+}
