--- a/movies-explorer/src/components/NotFoundPage/NotFoundPage.css
+++ b/movies-explorer/src/components/NotFoundPage/NotFoundPage.css
@@ -1,5 +1,7 @@
 .not-found-page__container {
   margin: 0 auto;
+  box-sizing: border-box;
+  padding: 246px 0 60px;
   max-width: 1140px;
   min-width: 320px;
   text-align: center;
@@ -29,4 +31,10 @@
   font-size: 14px;
   line-height: 17px;
   color: var(--main-color-third);
+}
+
+@media all and (max-width: 1200px) {
+  .not-found-page__container {
+    padding: 408px 0 222px;
+  }
 }
