--- a/movies-explorer/src/components/Header/Header.css
+++ b/movies-explorer/src/components/Header/Header.css
@@ -1,7 +1,11 @@
 .header {
   display: none;
+  position: sticky;
+  top: 0;
   width: 100%;
   margin: 0 auto;
+  background-color: #ffffff;
+  z-index: 1;
 }
 
 .header__container {
