--- a/movies-explorer/src/components/Header/_position_padding-top/header_position_padding-top.css
+++ b/movies-explorer/src/components/Header/_position_padding-top/header_position_padding-top.css
@@ -1,3 +1,9 @@
 .header_position_padding-top {
-  padding-top: 228px;
+  padding-top: 52px;
+}
+
+@media all and (max-width: 1200px) {
+  .header_position_padding-top {
+    padding-top: 228px;
+  }
 }
