--- a/movies-explorer/src/components/Footer/Footer.css
+++ b/movies-explorer/src/components/Footer/Footer.css
@@ -36,6 +36,7 @@
 .footer__links {
   display: flex;
   padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -50,5 +51,29 @@
 @media all and (max-width: 1200px) {
   .footer__container {
     padding: 80px 30px 20px;
+  }
+}
+
+@media all and (max-width: 530px) {
+  .footer__container {
+    padding: 80px 10px 10px;
+  }
+
+  .footer__navigation {
+    flex-direction: column-reverse;
+  }
+
+  .footer__links {
+    flex-direction: column;
+    text-align: center;
+    margin: 30px 0;
+  }
+
+  .footer__item {
+    margin-left: 0;
+    margin-bottom: 12px;
+  }
+  .footer__item:last-of-type {
+    margin-bottom: 0;
   }
 }
