--- a/movies-explorer/src/components/Header/Header.css
+++ b/movies-explorer/src/components/Header/Header.css
@@ -32,3 +32,13 @@
     padding: 0 0;
   }
 }
+
+@media all and (max-width: 440px) {
+  .header__container {
+    padding: 0 14px;
+  }
+
+  .header_deactive_padding {
+    padding: 0 0;
+  }
+}
