--- a/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
@@ -1,10 +1,11 @@
 .search-form {
   width: 100%;
+  min-width: 320px;
 }
 
 .search-form__container {
   margin: 0 auto;
-  min-width: 320px;
+
   max-width: 1140px;
   padding-top: 70px;
   padding-bottom: 48px;
@@ -19,7 +20,7 @@
   background: url(../../../images/icon-find.svg) no-repeat right 12px;
   background-size: 34px 34px;
   border: 0;
-  font-style: normal;
+
   font-weight: 500;
   font-size: 28px;
   line-height: 34px;
@@ -27,36 +28,9 @@
   outline: none;
 }
 
-.search-form__input::-webkit-input-placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  opacity: 1;
-  transition: opacity 0.2s ease;
-  color: var(--main-color-text);
-}
-
-.search-form__input::-moz-placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  opacity: 1;
-  transition: opacity 0.2s ease;
-  color: var(--main-color-text);
-}
-.search-form__input:-moz-placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  opacity: 1;
-  transition: opacity 0.2s ease;
-  color: var(--main-color-text);
-}
+.search-form__input::-webkit-input-placeholder,
+.search-form__input::-moz-placeholder,
 .search-form__input:-ms-input-placeholder {
-  font-style: normal;
   font-weight: 500;
   font-size: 28px;
   line-height: 34px;
@@ -115,5 +89,29 @@
   .search-form__name-checkbox {
     margin-left: 0;
     margin-right: 16px;
+  }
+}
+
+@media all and (max-width: 440px) {
+  .search-form__container {
+    padding: 90px 14px 50px;
+    align-items: center;
+  }
+
+  .search-form__input,
+  .search-form__input::-webkit-input-placeholder,
+  .search-form__input::-moz-placeholder,
+  .search-form__input:-ms-input-placeholder {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .search-form__input {
+    margin-bottom: 41px;
+  }
+
+  .search-form__checkbox-wrap {
+    justify-content: center;
+    align-items: center;
   }
 }
