--- a/movies-explorer/src/components/Main/AboutMe/AboutMe.css
+++ b/movies-explorer/src/components/Main/AboutMe/AboutMe.css
@@ -1,11 +1,12 @@
 .about-me {
   width: 100%;
+  min-width: 320px;
 }
 
 .about-me__container {
-  min-width: 320px;
   max-width: 1140px;
   margin: 0 auto;
+  box-sizing: border-box;
   padding-top: 110px;
   padding-bottom: 100px;
 }
@@ -23,11 +24,15 @@
 
 .about-me__presentation-wrap {
   display: flex;
+  justify-content: space-between;
+  margin-top: 66px;
 }
 
 .about-me__presentation {
   max-width: 600px;
-  padding-top: 66px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: var(--main-font-family);
 }
 
@@ -38,11 +43,13 @@
   font-size: 50px;
   line-height: 58px;
   letter-spacing: -0.04em;
+  box-sizing: border-box;
 }
 
 .about-me__job {
   margin: 0;
   padding-bottom: 26px;
+  box-sizing: border-box;
   font-weight: 500;
   font-size: 18px;
   line-height: 20px;
@@ -50,7 +57,7 @@
 
 .about-me__story {
   margin: 0;
-  padding-bottom: 100px;
+  padding-bottom: 119px;
   font-weight: normal;
   font-size: 14px;
   line-height: 22px;
@@ -63,16 +70,76 @@
   line-height: 17px;
   text-decoration: none;
   color: #000000;
-  transition: color 0.2s ease-in-out;
+  transition: color 0.25s ease-out;
 }
 
 .about-me__link:hover {
-  color: #818181;
+  color: #36363665;
+}
+
+.about-me__selfies {
+  width: 270px;
+  height: 327px;
+  margin-left: 50px;
+
+  border-radius: 10px;
 }
 
 @media all and (max-width: 1200px) {
   .about-me__container {
-    box-sizing: border-box;
     padding: 90px 50px;
+  }
+}
+
+@media all and (max-width: 896px) {
+  .about-me__selfies {
+    width: 255px;
+    height: 307px;
+  }
+
+  .about-me__story {
+    padding-bottom: 87px;
+  }
+
+  .about-me__job,
+  .about-me__story {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .about-me__name {
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  .about-me__name {
+    padding-bottom: 16px;
+  }
+
+  .about-me__job {
+    padding-bottom: 20px;
+  }
+}
+
+@media all and (max-width: 636px) {
+  .about-me__container {
+    padding: 70px 14px;
+  }
+
+  .about-me__presentation-wrap {
+    flex-direction: column-reverse;
+  }
+
+  .about-me__story {
+    padding-bottom: 40px;
+  }
+
+  .about-me__resume {
+    max-width: 292px;
+    margin-top: 40px;
+  }
+
+  .about-me__selfies {
+    margin: 0;
   }
 }
