--- a/movies-explorer/src/components/Main/Promo/Promo.css
+++ b/movies-explorer/src/components/Main/Promo/Promo.css
@@ -1,5 +1,8 @@
 .promo {
   width: 100%;
+  box-sizing: border-box;
+  padding-top: 75px;
+  padding-bottom: 75px;
   background-color: var(--main-color-first);
   font-family: var(--main-font-family);
 }
@@ -11,8 +14,6 @@
   justify-content: space-between;
   align-items: flex-start;
   margin: 0 auto;
-  padding-top: 75px;
-  padding-bottom: 75px;
 }
 
 .promo__wrapper {
@@ -53,10 +54,12 @@
 }
 
 @media all and (max-width: 1200px) {
-  .promo__container {
-    flex-direction: column-reverse;
+  .promo {
     padding-top: 140px;
     padding-bottom: 66px;
+  }
+  .promo__container {
+    flex-direction: column-reverse;
     align-items: center;
   }
 
@@ -81,5 +84,26 @@
   .promo__button {
     margin-top: 92px;
     margin-bottom: 10px;
+  }
+}
+
+@media all and (max-width: 636px) {
+  .promo {
+    padding-top: 70px;
+    padding-bottom: 30px;
+  }
+  .promo__title {
+    padding-top: 44px;
+    max-width: 378px;
+    font-size: 30px;
+    line-height: 38px;
+  }
+
+  .promo__image-logo {
+    width: 210px;
+  }
+
+  .promo__button {
+    margin-bottom: 80px;
   }
 }
