--- a/movies-explorer/src/components/Main/Techs/Techs.css
+++ b/movies-explorer/src/components/Main/Techs/Techs.css
@@ -1,10 +1,11 @@
 .techs {
-  width: 100%;
   background-color: var(--main-color-second);
+  box-sizing: border-box;
+  min-width: 320px;
+  font-family: var(--main-font-family);
 }
 
 .techs__container {
-  min-width: 320px;
   max-width: 1140px;
   margin: 0 auto;
   padding-top: 100px;
@@ -16,7 +17,7 @@
   padding-bottom: 23px;
   border-bottom: 1px solid black;
   text-align: left;
-  font-family: var(--main-font-family);
+
   font-weight: 400;
   line-height: 26.63px;
   font-size: 22px;
@@ -31,8 +32,7 @@
   margin: 0;
   padding-top: 90px;
   text-align: center;
-  font-family: var(--main-font-family);
-  font-style: normal;
+
   font-weight: normal;
   font-size: 50px;
   line-height: 58px;
@@ -44,8 +44,7 @@
   margin-top: 26px;
   text-align: center;
   max-width: 460px;
-  font-family: var(--main-font-family);
-  font-style: normal;
+
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
@@ -73,8 +72,6 @@
   border-radius: 10px;
   background-color: #e8e8e8;
 
-  font-family: Inter;
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
@@ -98,5 +95,56 @@
   }
   .techs__list {
     margin-top: 83px;
+  }
+}
+
+@media all and (max-width: 748px) {
+  .techs__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 82px);
+
+    gap: 10px;
+    width: 100%;
+  }
+
+  .techs__main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media all and (max-width: 636px) {
+  .techs {
+    padding: 70px 18px 70px;
+  }
+
+  .techs__container {
+    padding: 0;
+  }
+
+  .techs__subtitle {
+    padding-top: 60px;
+    font-size: 30px;
+    line-height: 36px;
+  }
+
+  .techs__description {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .techs__list {
+    margin-top: 50px;
+  }
+
+  .techs__item {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+@media all and (max-width: 440px) {
+  .techs__list {
+    width: 174px;
   }
 }
