--- a/movies-explorer/src/components/Register/Register.css
+++ b/movies-explorer/src/components/Register/Register.css
@@ -1,11 +1,12 @@
 .authorization {
   width: 100%;
   font-family: var(--main-font-family);
-  padding-top: 60px;
+  box-sizing: border-box;
+  padding: 60px 0 70px;
+  min-width: 320px;
 }
 
 .authorization__container {
-  min-width: 320px;
   max-width: 396px;
   margin: 0 auto;
 }
@@ -93,5 +94,31 @@
 @media all and (max-width: 1200px) {
   .authorization {
     padding-top: 36px;
+  }
+}
+
+@media all and (max-width: 570px) {
+  .authorization__container {
+    max-width: 260px;
+  }
+
+  .authorization__title {
+    text-align: center;
+    margin-bottom: 80px;
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  .authorization__button {
+    margin: 0;
+    margin-top: 157px;
+    height: 45px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .authorization__suggest {
+    font-size: 12px;
+    line-height: 15px;
   }
 }
