--- a/movies-explorer/src/components/Header/_justify-content_center/header_justify-content_center.css
+++ b/movies-explorer/src/components/Header/_justify-content_center/header_justify-content_center.css
@@ -1,3 +1,5 @@
-.header_justify-content_center {
-  justify-content: center;
+@media all and (max-width: 570px) {
+  .header_justify-content_center {
+    justify-content: center;
+  }
 }
