--- a/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/movies-explorer/src/components/Movies/MoviesCard/MoviesCard.css
@@ -16,6 +16,12 @@
 
 .movies-card__title {
   margin: 0;
+  max-width: 230px;
+
+  text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
+
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
@@ -31,6 +37,8 @@
 
 .movies-card__image {
   width: 100%;
+  height: 200px;
+  object-fit: fill;
 }
 
 .movies-card__button {
