--- a/movies-explorer/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/movies-explorer/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -39,6 +39,18 @@
   background-color: #d1d1d165;
 }
 
+.movies-card-list__caption {
+  max-width: 450px;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 100px;
+  font-size: 20px;
+  line-height: 28px;
+
+  text-align: center;
+  color: var(--main-color-text);
+}
+
 @media all and (max-width: 1200px) {
   .movies-card-list__container {
     padding: 70px 30px 30px;
@@ -63,5 +75,9 @@
 
   .movies-card-list__append-button {
     width: 240px;
+  }
+
+  .movies-card-list__caption {
+    font-size: 16px;
   }
 }
