--- a/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/Movies/SearchForm/SearchForm.css
@@ -5,6 +5,10 @@
 
 .search-form__container {
   margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: relative;
   max-width: 1140px;
   padding-top: 70px;
@@ -14,7 +18,7 @@
 
 .search-form__input {
   width: 100%;
-  margin-bottom: 35px;
+  margin-bottom: 8px;
   padding-top: 6px;
   padding-bottom: 14px;
   border: 0;
@@ -73,6 +77,15 @@
   opacity: 0.6;
 }
 
+.search-form__caption {
+  height: 15px;
+  align-self: flex-start;
+  margin-bottom: 10px;
+  font-size: 10px;
+  line-height: 12px;
+  color: var(--main-color-accent);
+}
+
 .search-form__checkbox-wrap {
   display: flex;
   align-items: center;
@@ -90,12 +103,10 @@
 @media all and (max-width: 1200px) {
   .search-form__container {
     padding: 80px 30px 60px;
-    display: flex;
-    flex-direction: column;
     align-items: flex-end;
   }
   .search-form__input {
-    margin-bottom: 30px;
+    margin-bottom: 8px;
   }
 
   .search-form__checkbox-wrap {
@@ -106,6 +117,9 @@
   .search-form__name-checkbox {
     margin-left: 0;
     margin-right: 16px;
+  }
+  .search-form__caption {
+    margin-bottom: 10px;
   }
 
   .search-form__button {
@@ -129,12 +143,16 @@
   }
 
   .search-form__input {
-    margin-bottom: 41px;
+    margin-bottom: 10px;
   }
 
   .search-form__checkbox-wrap {
     justify-content: center;
     align-items: center;
+  }
+  .search-form__caption {
+    height: 35px;
+    margin-bottom: 0;
   }
 
   .search-form__button {
