feat: make a hover for links Navigation

--- a/movies-explorer/src/components/Navigation/Navigation.css
+++ b/movies-explorer/src/components/Navigation/Navigation.css
@@ -29,6 +29,8 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .navigation__login-link {
@@ -45,6 +47,8 @@
   line-height: 16px;
   text-decoration: none;
   color: #000;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .navigation__movies-link,
@@ -58,11 +62,15 @@
 
 .navigation__movies-link {
   font-weight: 500;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .navigation__save-films-link {
   margin-left: 20px;
   font-weight: normal;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .navigation__profile-link {
@@ -75,6 +83,16 @@
   line-height: 16px;
 
   color: #000000;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+}
+
+.navigation__login-link:hover,
+.navigation__register-link:hover,
+.navigation__movies-link:hover,
+.navigation__save-films-link:hover,
+.navigation__profile-link:hover {
+  opacity: 0.6;
 }
 
 .navigation__accaunt-image {
