--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -29,7 +29,9 @@
   line-height: 29px;
 }
 
-.profile__input-field:first-child {
+.profile__input-list {
+  padding: 0;
+  margin: 0;
 }
 
 .profile__input-field {
@@ -73,39 +75,6 @@
   line-height: 13px;
 }
 
-.profile__input::-webkit-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-.profile__input::-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-.profile__input:-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-.profile__input:-ms-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-.profile__input:focus::-webkit-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-.profile__input:focus::-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-.profile__input:focus:-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-.profile__input:focus:-ms-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
 .profile__input-error {
   height: 10px;
   font-size: 10px;
@@ -114,7 +83,7 @@
   color: var(--main-color-accent);
 }
 
-.proile__success-message{
+.proile__success-message {
   visibility: hidden;
   color: var(--main-color-third);
   font-weight: normal;
@@ -122,14 +91,15 @@
   height: 15px;
   font-size: 13px;
   line-height: 16px;
+  margin-top: 194px;
 }
 
-.proile__success-message_active{
+.proile__success-message_active {
   visibility: visible;
 }
 
 .profile__button {
-  margin-top: 220px;
+  margin-top: 16px;
   font-weight: normal;
   color: #c8c8c8;
   border: none;
@@ -160,8 +130,8 @@
     margin-bottom: 96px;
   }
 
-  .profile__button {
-    margin-top: 210px;
+  .proile__success-message {
+    margin-top: 184px;
   }
 }
 
@@ -178,8 +148,8 @@
     margin-bottom: 80px;
   }
 
-  .profile__button {
-    margin-top: 380px;
+  .proile__success-message {
+    margin-top: 330px;
   }
 
   .profile__button,
