--- a/src/components/PopupInfoTooltip/PopupInfoTooltip.css
+++ b/src/components/PopupInfoTooltip/PopupInfoTooltip.css
@@ -11,7 +11,74 @@
   justify-content: center;
   align-items: center;
 
-  /* visibility: hidden; */
+  visibility: hidden;
   opacity: 0;
   transition: 0.2s linear;
+  z-index: 100;
+  font-family: var(--main-font-family);
+}
+
+.popup__info-tooltip {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+.popup__container {
+  position: relative;
+  width: 430px;
+  min-height: 130px;
+  background: white;
+  border-radius: 10px;
+}
+
+.popup__title {
+  width: calc(100% - 72px);
+  margin: 0;
+  margin-bottom: 54px;
+  margin-top: 32px;
+  text-align: center;
+
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.popup__closeButton {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  border: none;
+  outline: none;
+  background: url(../../images/close-icon.svg) no-repeat center;
+  background-size: contain;
+  top: -34px;
+  right: -35px;
+  cursor: pointer;
+  transition: 0.1s ease;
+}
+
+.popup__closeButton:hover {
+  opacity: 0.6;
+}
+
+@media screen and (max-width: 580px) {
+  .popup__container {
+    max-width: 282px;
+    min-height: 322px;
+  }
+
+  .popup__title {
+    width: calc(100% - 44px);
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .popup__closeButton {
+    width: 22px;
+    top: -45px;
+    right: 6px;
+  }
 }
