--- a/src/components/Movies/Preloader/Preloader.css
+++ b/src/components/Movies/Preloader/Preloader.css
@@ -43,11 +43,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  /* position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
   height: 100%;
   z-index: 10;
